[package]
name = "proxy-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-service = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
env_logger = "^0.8"
futures = "^0.3"
log = "^0.4"
serde = "1"
serde_json = "1"
url = "2.0"
uuid = { version = "^0.8", features = ["serde"] }
