[package]
name = "simpleapikeys-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "^3.3"
bson = "^1.2"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
env_logger = "^0.8"
futures = "^0.3"
log = "^0.4"
mongodb = "^1.2"
serde = "1"
serde_json = "1"
thiserror = "^1.0"
uuid = { version = "^0.8", features = ["serde"] }